y.output
Terminals which are not used

   OTHER


Rules never reduced

   12 storeID: ID


State 78 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program declaration ';'
    2        | program function
    3        | program declaration error
    4        | error ';'
    5        | /* empty */

    6 declaration: type varDcl multiVarDcl
    7            | storeExtern type storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt
    8            | type storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt
    9            | storeExtern storeVoid storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt
   10            | storeVoid storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt

   11 storeFID: ID

   12 storeID: ID

   13 storeExtern: EXTERN

   14 storeVoid: VOID

   15 makeProt: /* empty */

   16 multiProtDcl: multiProtDcl ',' makeProt storeFID '(' insertFunc paramTypes ')'
   17             | /* empty */

   18 multiVarDcl: multiVarDcl ',' varDcl
   19            | /* empty */

   20 varDcl: ID
   21       | ID '[' INTCON ']'

   22 type: CHAR
   23     | INT

   24 initParam: /* empty */

   25 paramTypes: initParam VOID
   26           | initParam arrayTypeOpt multiParam

   27 arrayTypeOpt: type ID
   28             | type ID '[' ']'

   29 multiParam: multiParam ',' arrayTypeOpt
   30           | /* empty */

   31 insertFunc: /* empty */

   32 function: type storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}'
   33         | storeVoid storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}'

   34 multiTypeDcl: multiTypeDcl type varDcl multiVarDcl ';'
   35             | multiTypeDcl type error ';'
   36             | /* empty */

   37 statement: IF '(' expr ')' statement
   38          | IF '(' expr ')' statement ELSE statement
   39          | WHILE '(' expr ')' statement
   40          | FOR '(' assgOpt ';' exprOpt ';' assgOpt ')' statement
   41          | RETURN expr ';'
   42          | RETURN ';'
   43          | assignment ';'
   44          | ID '(' ')'
   45          | storeID '(' initParam args multiExprOpt ')' ';'
   46          | '{' statementOpt '}'
   47          | ';'
   48          | error ';'

   49 statementOpt: statementOpt statement
   50             | /* empty */

   51 assignment: ID '=' expr
   52           | ID '[' expr ']' '=' expr

   53 assgOpt: assignment
   54        | /* empty */

   55 expr: '-' expr
   56     | '!' expr
   57     | expr '+' expr
   58     | expr '-' expr
   59     | expr '*' expr
   60     | expr '/' expr
   61     | expr DBLEQ expr
   62     | expr NOTEQ expr
   63     | expr LTEQ expr
   64     | expr '<' expr
   65     | expr GTEQ expr
   66     | expr '>' expr
   67     | expr LOGICAND expr
   68     | expr LOGICOR expr

   69 @1: /* empty */

   70 expr: ID @1 multiFuncOpt
   71     | '(' expr ')'
   72     | INTCON
   73     | CHARCON
   74     | STRCON

   75 multiFuncOpt: '(' ')'
   76             | '(' initParam args multiExprOpt ')'
   77             | '[' expr ']'
   78             | /* empty */

   79 args: expr

   80 exprOpt: expr
   81        | /* empty */

   82 multiExprOpt: multiExprOpt ',' args
   83             | /* empty */


Terminals, with rules where they appear

$end (0) 0
'!' (33) 56
'(' (40) 7 8 9 10 16 32 33 37 38 39 40 44 45 71 75 76
')' (41) 7 8 9 10 16 32 33 37 38 39 40 44 45 71 75 76
'*' (42) 59
'+' (43) 57
',' (44) 16 18 29 82
'-' (45) 55 58
'/' (47) 60
';' (59) 1 4 34 35 40 41 42 43 45 47 48
'<' (60) 64
'=' (61) 51 52
'>' (62) 66
'[' (91) 21 28 52 77
']' (93) 21 28 52 77
'{' (123) 32 33 46
'}' (125) 32 33 46
error (256) 3 4 35 48
ID (258) 11 12 20 21 27 28 44 51 52 70
INTCON (259) 21 72
CHARCON (260) 73
STRCON (261) 74
CHAR (262) 22
INT (263) 23
VOID (264) 14 25
IF (265) 37 38
ELSE (266) 38
WHILE (267) 39
FOR (268) 40
RETURN (269) 41 42
EXTERN (270) 13
UMINUS (271)
DBLEQ (272) 61
NOTEQ (273) 62
LTEQ (274) 63
GTEQ (275) 65
LOGICAND (276) 67
LOGICOR (277) 68
OTHER (278)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program (41)
    on left: 1 2 3 4 5, on right: 0 1 2 3
declaration (42)
    on left: 6 7 8 9 10, on right: 1 3
storeFID (43)
    on left: 11, on right: 7 8 9 10 16 32 33
storeID (44)
    on left: 12, on right: 45
storeExtern (45)
    on left: 13, on right: 7 9
storeVoid (46)
    on left: 14, on right: 9 10 33
makeProt (47)
    on left: 15, on right: 7 8 9 10 16
multiProtDcl (48)
    on left: 16 17, on right: 7 8 9 10 16
multiVarDcl (49)
    on left: 18 19, on right: 6 18 34
varDcl (50)
    on left: 20 21, on right: 6 18 34
type (51)
    on left: 22 23, on right: 6 7 8 27 28 32 34 35
initParam (52)
    on left: 24, on right: 25 26 45 76
paramTypes (53)
    on left: 25 26, on right: 7 8 9 10 16 32 33
arrayTypeOpt (54)
    on left: 27 28, on right: 26 29
multiParam (55)
    on left: 29 30, on right: 26 29
insertFunc (56)
    on left: 31, on right: 7 8 9 10 16 32 33
function (57)
    on left: 32 33, on right: 2
multiTypeDcl (58)
    on left: 34 35 36, on right: 32 33 34 35
statement (59)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48, on right: 37 38 39
    40 49
statementOpt (60)
    on left: 49 50, on right: 32 33 46 49
assignment (61)
    on left: 51 52, on right: 43 53
assgOpt (62)
    on left: 53 54, on right: 40
expr (63)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 70 71 72 73
    74, on right: 37 38 39 41 51 52 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 71 77 79 80
@1 (64)
    on left: 69, on right: 70
multiFuncOpt (65)
    on left: 75 76 77 78, on right: 70
args (66)
    on left: 79, on right: 45 76 82
exprOpt (67)
    on left: 80 81, on right: 40
multiExprOpt (68)
    on left: 82 83, on right: 45 76 82


state 0

    0 $accept: . program $end

    error  shift, and go to state 1

    $end    reduce using rule 5 (program)
    CHAR    reduce using rule 5 (program)
    INT     reduce using rule 5 (program)
    VOID    reduce using rule 5 (program)
    EXTERN  reduce using rule 5 (program)

    program  go to state 2


state 1

    4 program: error . ';'

    ';'  shift, and go to state 3


state 2

    0 $accept: program . $end
    1 program: program . declaration ';'
    2        | program . function
    3        | program . declaration error

    $end    shift, and go to state 4
    CHAR    shift, and go to state 5
    INT     shift, and go to state 6
    VOID    shift, and go to state 7
    EXTERN  shift, and go to state 8

    declaration  go to state 9
    storeExtern  go to state 10
    storeVoid    go to state 11
    type         go to state 12
    function     go to state 13


state 3

    4 program: error ';' .

    $default  reduce using rule 4 (program)


state 4

    0 $accept: program $end .

    $default  accept


state 5

   22 type: CHAR .

    $default  reduce using rule 22 (type)


state 6

   23 type: INT .

    $default  reduce using rule 23 (type)


state 7

   14 storeVoid: VOID .

    $default  reduce using rule 14 (storeVoid)


state 8

   13 storeExtern: EXTERN .

    $default  reduce using rule 13 (storeExtern)


state 9

    1 program: program declaration . ';'
    3        | program declaration . error

    error  shift, and go to state 14
    ';'    shift, and go to state 15


state 10

    7 declaration: storeExtern . type storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt
    9            | storeExtern . storeVoid storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt

    CHAR  shift, and go to state 5
    INT   shift, and go to state 6
    VOID  shift, and go to state 7

    storeVoid  go to state 16
    type       go to state 17


state 11

   10 declaration: storeVoid . storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt
   33 function: storeVoid . storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}'

    ID  shift, and go to state 18

    storeFID  go to state 19


state 12

    6 declaration: type . varDcl multiVarDcl
    8            | type . storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt
   32 function: type . storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}'

    ID  shift, and go to state 20

    storeFID  go to state 21
    varDcl    go to state 22


state 13

    2 program: program function .

    $default  reduce using rule 2 (program)


state 14

    3 program: program declaration error .

    $default  reduce using rule 3 (program)


state 15

    1 program: program declaration ';' .

    $default  reduce using rule 1 (program)


state 16

    9 declaration: storeExtern storeVoid . storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt

    ID  shift, and go to state 18

    storeFID  go to state 23


state 17

    7 declaration: storeExtern type . storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt

    ID  shift, and go to state 18

    storeFID  go to state 24


state 18

   11 storeFID: ID .

    $default  reduce using rule 11 (storeFID)


state 19

   10 declaration: storeVoid storeFID . '(' insertFunc paramTypes ')' multiProtDcl makeProt
   33 function: storeVoid storeFID . '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}'

    '('  shift, and go to state 25


state 20

   11 storeFID: ID .
   20 varDcl: ID .
   21       | ID . '[' INTCON ']'

    '['  shift, and go to state 26

    '('       reduce using rule 11 (storeFID)
    $default  reduce using rule 20 (varDcl)


state 21

    8 declaration: type storeFID . '(' insertFunc paramTypes ')' multiProtDcl makeProt
   32 function: type storeFID . '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}'

    '('  shift, and go to state 27


state 22

    6 declaration: type varDcl . multiVarDcl

    $default  reduce using rule 19 (multiVarDcl)

    multiVarDcl  go to state 28


state 23

    9 declaration: storeExtern storeVoid storeFID . '(' insertFunc paramTypes ')' multiProtDcl makeProt

    '('  shift, and go to state 29


state 24

    7 declaration: storeExtern type storeFID . '(' insertFunc paramTypes ')' multiProtDcl makeProt

    '('  shift, and go to state 30


state 25

   10 declaration: storeVoid storeFID '(' . insertFunc paramTypes ')' multiProtDcl makeProt
   33 function: storeVoid storeFID '(' . insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}'

    $default  reduce using rule 31 (insertFunc)

    insertFunc  go to state 31


state 26

   21 varDcl: ID '[' . INTCON ']'

    INTCON  shift, and go to state 32


state 27

    8 declaration: type storeFID '(' . insertFunc paramTypes ')' multiProtDcl makeProt
   32 function: type storeFID '(' . insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}'

    $default  reduce using rule 31 (insertFunc)

    insertFunc  go to state 33


state 28

    6 declaration: type varDcl multiVarDcl .
   18 multiVarDcl: multiVarDcl . ',' varDcl

    ','  shift, and go to state 34

    $default  reduce using rule 6 (declaration)


state 29

    9 declaration: storeExtern storeVoid storeFID '(' . insertFunc paramTypes ')' multiProtDcl makeProt

    $default  reduce using rule 31 (insertFunc)

    insertFunc  go to state 35


state 30

    7 declaration: storeExtern type storeFID '(' . insertFunc paramTypes ')' multiProtDcl makeProt

    $default  reduce using rule 31 (insertFunc)

    insertFunc  go to state 36


state 31

   10 declaration: storeVoid storeFID '(' insertFunc . paramTypes ')' multiProtDcl makeProt
   33 function: storeVoid storeFID '(' insertFunc . paramTypes ')' '{' multiTypeDcl statementOpt '}'

    $default  reduce using rule 24 (initParam)

    initParam   go to state 37
    paramTypes  go to state 38


state 32

   21 varDcl: ID '[' INTCON . ']'

    ']'  shift, and go to state 39


state 33

    8 declaration: type storeFID '(' insertFunc . paramTypes ')' multiProtDcl makeProt
   32 function: type storeFID '(' insertFunc . paramTypes ')' '{' multiTypeDcl statementOpt '}'

    $default  reduce using rule 24 (initParam)

    initParam   go to state 37
    paramTypes  go to state 40


state 34

   18 multiVarDcl: multiVarDcl ',' . varDcl

    ID  shift, and go to state 41

    varDcl  go to state 42


state 35

    9 declaration: storeExtern storeVoid storeFID '(' insertFunc . paramTypes ')' multiProtDcl makeProt

    $default  reduce using rule 24 (initParam)

    initParam   go to state 37
    paramTypes  go to state 43


state 36

    7 declaration: storeExtern type storeFID '(' insertFunc . paramTypes ')' multiProtDcl makeProt

    $default  reduce using rule 24 (initParam)

    initParam   go to state 37
    paramTypes  go to state 44


state 37

   25 paramTypes: initParam . VOID
   26           | initParam . arrayTypeOpt multiParam

    CHAR  shift, and go to state 5
    INT   shift, and go to state 6
    VOID  shift, and go to state 45

    type          go to state 46
    arrayTypeOpt  go to state 47


state 38

   10 declaration: storeVoid storeFID '(' insertFunc paramTypes . ')' multiProtDcl makeProt
   33 function: storeVoid storeFID '(' insertFunc paramTypes . ')' '{' multiTypeDcl statementOpt '}'

    ')'  shift, and go to state 48


state 39

   21 varDcl: ID '[' INTCON ']' .

    $default  reduce using rule 21 (varDcl)


state 40

    8 declaration: type storeFID '(' insertFunc paramTypes . ')' multiProtDcl makeProt
   32 function: type storeFID '(' insertFunc paramTypes . ')' '{' multiTypeDcl statementOpt '}'

    ')'  shift, and go to state 49


state 41

   20 varDcl: ID .
   21       | ID . '[' INTCON ']'

    '['  shift, and go to state 26

    $default  reduce using rule 20 (varDcl)


state 42

   18 multiVarDcl: multiVarDcl ',' varDcl .

    $default  reduce using rule 18 (multiVarDcl)


state 43

    9 declaration: storeExtern storeVoid storeFID '(' insertFunc paramTypes . ')' multiProtDcl makeProt

    ')'  shift, and go to state 50


state 44

    7 declaration: storeExtern type storeFID '(' insertFunc paramTypes . ')' multiProtDcl makeProt

    ')'  shift, and go to state 51


state 45

   25 paramTypes: initParam VOID .

    $default  reduce using rule 25 (paramTypes)


state 46

   27 arrayTypeOpt: type . ID
   28             | type . ID '[' ']'

    ID  shift, and go to state 52


state 47

   26 paramTypes: initParam arrayTypeOpt . multiParam

    $default  reduce using rule 30 (multiParam)

    multiParam  go to state 53


state 48

   10 declaration: storeVoid storeFID '(' insertFunc paramTypes ')' . multiProtDcl makeProt
   33 function: storeVoid storeFID '(' insertFunc paramTypes ')' . '{' multiTypeDcl statementOpt '}'

    '{'  shift, and go to state 54

    $default  reduce using rule 17 (multiProtDcl)

    multiProtDcl  go to state 55


state 49

    8 declaration: type storeFID '(' insertFunc paramTypes ')' . multiProtDcl makeProt
   32 function: type storeFID '(' insertFunc paramTypes ')' . '{' multiTypeDcl statementOpt '}'

    '{'  shift, and go to state 56

    $default  reduce using rule 17 (multiProtDcl)

    multiProtDcl  go to state 57


state 50

    9 declaration: storeExtern storeVoid storeFID '(' insertFunc paramTypes ')' . multiProtDcl makeProt

    $default  reduce using rule 17 (multiProtDcl)

    multiProtDcl  go to state 58


state 51

    7 declaration: storeExtern type storeFID '(' insertFunc paramTypes ')' . multiProtDcl makeProt

    $default  reduce using rule 17 (multiProtDcl)

    multiProtDcl  go to state 59


state 52

   27 arrayTypeOpt: type ID .
   28             | type ID . '[' ']'

    '['  shift, and go to state 60

    $default  reduce using rule 27 (arrayTypeOpt)


state 53

   26 paramTypes: initParam arrayTypeOpt multiParam .
   29 multiParam: multiParam . ',' arrayTypeOpt

    ','  shift, and go to state 61

    $default  reduce using rule 26 (paramTypes)


state 54

   33 function: storeVoid storeFID '(' insertFunc paramTypes ')' '{' . multiTypeDcl statementOpt '}'

    $default  reduce using rule 36 (multiTypeDcl)

    multiTypeDcl  go to state 62


state 55

   10 declaration: storeVoid storeFID '(' insertFunc paramTypes ')' multiProtDcl . makeProt
   16 multiProtDcl: multiProtDcl . ',' makeProt storeFID '(' insertFunc paramTypes ')'

    ','  shift, and go to state 63

    $default  reduce using rule 15 (makeProt)

    makeProt  go to state 64


state 56

   32 function: type storeFID '(' insertFunc paramTypes ')' '{' . multiTypeDcl statementOpt '}'

    $default  reduce using rule 36 (multiTypeDcl)

    multiTypeDcl  go to state 65


state 57

    8 declaration: type storeFID '(' insertFunc paramTypes ')' multiProtDcl . makeProt
   16 multiProtDcl: multiProtDcl . ',' makeProt storeFID '(' insertFunc paramTypes ')'

    ','  shift, and go to state 63

    $default  reduce using rule 15 (makeProt)

    makeProt  go to state 66


state 58

    9 declaration: storeExtern storeVoid storeFID '(' insertFunc paramTypes ')' multiProtDcl . makeProt
   16 multiProtDcl: multiProtDcl . ',' makeProt storeFID '(' insertFunc paramTypes ')'

    ','  shift, and go to state 63

    $default  reduce using rule 15 (makeProt)

    makeProt  go to state 67


state 59

    7 declaration: storeExtern type storeFID '(' insertFunc paramTypes ')' multiProtDcl . makeProt
   16 multiProtDcl: multiProtDcl . ',' makeProt storeFID '(' insertFunc paramTypes ')'

    ','  shift, and go to state 63

    $default  reduce using rule 15 (makeProt)

    makeProt  go to state 68


state 60

   28 arrayTypeOpt: type ID '[' . ']'

    ']'  shift, and go to state 69


state 61

   29 multiParam: multiParam ',' . arrayTypeOpt

    CHAR  shift, and go to state 5
    INT   shift, and go to state 6

    type          go to state 46
    arrayTypeOpt  go to state 70


state 62

   33 function: storeVoid storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl . statementOpt '}'
   34 multiTypeDcl: multiTypeDcl . type varDcl multiVarDcl ';'
   35             | multiTypeDcl . type error ';'

    CHAR  shift, and go to state 5
    INT   shift, and go to state 6

    $default  reduce using rule 50 (statementOpt)

    type          go to state 71
    statementOpt  go to state 72


state 63

   16 multiProtDcl: multiProtDcl ',' . makeProt storeFID '(' insertFunc paramTypes ')'

    $default  reduce using rule 15 (makeProt)

    makeProt  go to state 73


state 64

   10 declaration: storeVoid storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt .

    $default  reduce using rule 10 (declaration)


state 65

   32 function: type storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl . statementOpt '}'
   34 multiTypeDcl: multiTypeDcl . type varDcl multiVarDcl ';'
   35             | multiTypeDcl . type error ';'

    CHAR  shift, and go to state 5
    INT   shift, and go to state 6

    $default  reduce using rule 50 (statementOpt)

    type          go to state 71
    statementOpt  go to state 74


state 66

    8 declaration: type storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt .

    $default  reduce using rule 8 (declaration)


state 67

    9 declaration: storeExtern storeVoid storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt .

    $default  reduce using rule 9 (declaration)


state 68

    7 declaration: storeExtern type storeFID '(' insertFunc paramTypes ')' multiProtDcl makeProt .

    $default  reduce using rule 7 (declaration)


state 69

   28 arrayTypeOpt: type ID '[' ']' .

    $default  reduce using rule 28 (arrayTypeOpt)


state 70

   29 multiParam: multiParam ',' arrayTypeOpt .

    $default  reduce using rule 29 (multiParam)


state 71

   34 multiTypeDcl: multiTypeDcl type . varDcl multiVarDcl ';'
   35             | multiTypeDcl type . error ';'

    error  shift, and go to state 75
    ID     shift, and go to state 41

    varDcl  go to state 76


state 72

   33 function: storeVoid storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt . '}'
   49 statementOpt: statementOpt . statement

    error   shift, and go to state 77
    ID      shift, and go to state 78
    IF      shift, and go to state 79
    WHILE   shift, and go to state 80
    FOR     shift, and go to state 81
    RETURN  shift, and go to state 82
    ';'     shift, and go to state 83
    '{'     shift, and go to state 84
    '}'     shift, and go to state 85

    storeID     go to state 86
    statement   go to state 87
    assignment  go to state 88


state 73

   16 multiProtDcl: multiProtDcl ',' makeProt . storeFID '(' insertFunc paramTypes ')'

    ID  shift, and go to state 18

    storeFID  go to state 89


state 74

   32 function: type storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt . '}'
   49 statementOpt: statementOpt . statement

    error   shift, and go to state 77
    ID      shift, and go to state 78
    IF      shift, and go to state 79
    WHILE   shift, and go to state 80
    FOR     shift, and go to state 81
    RETURN  shift, and go to state 82
    ';'     shift, and go to state 83
    '{'     shift, and go to state 84
    '}'     shift, and go to state 90

    storeID     go to state 86
    statement   go to state 87
    assignment  go to state 88


state 75

   35 multiTypeDcl: multiTypeDcl type error . ';'

    ';'  shift, and go to state 91


state 76

   34 multiTypeDcl: multiTypeDcl type varDcl . multiVarDcl ';'

    $default  reduce using rule 19 (multiVarDcl)

    multiVarDcl  go to state 92


state 77

   48 statement: error . ';'

    ';'  shift, and go to state 93


state 78

   12 storeID: ID .
   44 statement: ID . '(' ')'
   51 assignment: ID . '=' expr
   52           | ID . '[' expr ']' '=' expr

    '('  shift, and go to state 94
    '['  shift, and go to state 95
    '='  shift, and go to state 96

    '('  [reduce using rule 12 (storeID)]


state 79

   37 statement: IF . '(' expr ')' statement
   38          | IF . '(' expr ')' statement ELSE statement

    '('  shift, and go to state 97


state 80

   39 statement: WHILE . '(' expr ')' statement

    '('  shift, and go to state 98


state 81

   40 statement: FOR . '(' assgOpt ';' exprOpt ';' assgOpt ')' statement

    '('  shift, and go to state 99


state 82

   41 statement: RETURN . expr ';'
   42          | RETURN . ';'

    ID       shift, and go to state 100
    INTCON   shift, and go to state 101
    CHARCON  shift, and go to state 102
    STRCON   shift, and go to state 103
    '-'      shift, and go to state 104
    '!'      shift, and go to state 105
    ';'      shift, and go to state 106
    '('      shift, and go to state 107

    expr  go to state 108


state 83

   47 statement: ';' .

    $default  reduce using rule 47 (statement)


state 84

   46 statement: '{' . statementOpt '}'

    $default  reduce using rule 50 (statementOpt)

    statementOpt  go to state 109


state 85

   33 function: storeVoid storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}' .

    $default  reduce using rule 33 (function)


state 86

   45 statement: storeID . '(' initParam args multiExprOpt ')' ';'

    '('  shift, and go to state 110


state 87

   49 statementOpt: statementOpt statement .

    $default  reduce using rule 49 (statementOpt)


state 88

   43 statement: assignment . ';'

    ';'  shift, and go to state 111


state 89

   16 multiProtDcl: multiProtDcl ',' makeProt storeFID . '(' insertFunc paramTypes ')'

    '('  shift, and go to state 112


state 90

   32 function: type storeFID '(' insertFunc paramTypes ')' '{' multiTypeDcl statementOpt '}' .

    $default  reduce using rule 32 (function)


state 91

   35 multiTypeDcl: multiTypeDcl type error ';' .

    $default  reduce using rule 35 (multiTypeDcl)


state 92

   18 multiVarDcl: multiVarDcl . ',' varDcl
   34 multiTypeDcl: multiTypeDcl type varDcl multiVarDcl . ';'

    ';'  shift, and go to state 113
    ','  shift, and go to state 34


state 93

   48 statement: error ';' .

    $default  reduce using rule 48 (statement)


state 94

   44 statement: ID '(' . ')'

    ')'  shift, and go to state 114


state 95

   52 assignment: ID '[' . expr ']' '=' expr

    ID       shift, and go to state 100
    INTCON   shift, and go to state 101
    CHARCON  shift, and go to state 102
    STRCON   shift, and go to state 103
    '-'      shift, and go to state 104
    '!'      shift, and go to state 105
    '('      shift, and go to state 107

    expr  go to state 115


state 96

   51 assignment: ID '=' . expr

    ID       shift, and go to state 100
    INTCON   shift, and go to state 101
    CHARCON  shift, and go to state 102
    STRCON   shift, and go to state 103
    '-'      shift, and go to state 104
    '!'      shift, and go to state 105
    '('      shift, and go to state 107

    expr  go to state 116


state 97

   37 statement: IF '(' . expr ')' statement
   38          | IF '(' . expr ')' statement ELSE statement

    ID       shift, and go to state 100
    INTCON   shift, and go to state 101
    CHARCON  shift, and go to state 102
    STRCON   shift, and go to state 103
    '-'      shift, and go to state 104
    '!'      shift, and go to state 105
    '('      shift, and go to state 107

    expr  go to state 117


state 98

   39 statement: WHILE '(' . expr ')' statement

    ID       shift, and go to state 100
    INTCON   shift, and go to state 101
    CHARCON  shift, and go to state 102
    STRCON   shift, and go to state 103
    '-'      shift, and go to state 104
    '!'      shift, and go to state 105
    '('      shift, and go to state 107

    expr  go to state 118


state 99

   40 statement: FOR '(' . assgOpt ';' exprOpt ';' assgOpt ')' statement

    ID  shift, and go to state 119

    $default  reduce using rule 54 (assgOpt)

    assignment  go to state 120
    assgOpt     go to state 121


state 100

   70 expr: ID . @1 multiFuncOpt

    $default  reduce using rule 69 (@1)

    @1  go to state 122


state 101

   72 expr: INTCON .

    $default  reduce using rule 72 (expr)


state 102

   73 expr: CHARCON .

    $default  reduce using rule 73 (expr)


state 103

   74 expr: STRCON .

    $default  reduce using rule 74 (expr)


state 104

   55 expr: '-' . expr

    ID       shift, and go to state 100
    INTCON   shift, and go to state 101
    CHARCON  shift, and go to state 102
    STRCON   shift, and go to state 103
    '-'      shift, and go to state 104
    '!'      shift, and go to state 105
    '('      shift, and go to state 107

    expr  go to state 123


state 105

   56 expr: '!' . expr

    ID       shift, and go to state 100
    INTCON   shift, and go to state 101
    CHARCON  shift, and go to state 102
    STRCON   shift, and go to state 103
    '-'      shift, and go to state 104
    '!'      shift, and go to state 105
    '('      shift, and go to state 107

    expr  go to state 124


state 106

   42 statement: RETURN ';' .

    $default  reduce using rule 42 (statement)


state 107

   71 expr: '(' . expr ')'

    ID       shift, and go to state 100
    INTCON   shift, and go to state 101
    CHARCON  shift, and go to state 102
    STRCON   shift, and go to state 103
    '-'      shift, and go to state 104
    '!'      shift, and go to state 105
    '('      shift, and go to state 107

    expr  go to state 125


state 108

   41 statement: RETURN expr . ';'
   57 expr: expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   61     | expr . DBLEQ expr
   62     | expr . NOTEQ expr
   63     | expr . LTEQ expr
   64     | expr . '<' expr
   65     | expr . GTEQ expr
   66     | expr . '>' expr
   67     | expr . LOGICAND expr
   68     | expr . LOGICOR expr

    DBLEQ     shift, and go to state 126
    NOTEQ     shift, and go to state 127
    LTEQ      shift, and go to state 128
    GTEQ      shift, and go to state 129
    LOGICAND  shift, and go to state 130
    LOGICOR   shift, and go to state 131
    '<'       shift, and go to state 132
    '>'       shift, and go to state 133
    '+'       shift, and go to state 134
    '-'       shift, and go to state 135
    '*'       shift, and go to state 136
    '/'       shift, and go to state 137
    ';'       shift, and go to state 138


state 109

   46 statement: '{' statementOpt . '}'
   49 statementOpt: statementOpt . statement

    error   shift, and go to state 77
    ID      shift, and go to state 78
    IF      shift, and go to state 79
    WHILE   shift, and go to state 80
    FOR     shift, and go to state 81
    RETURN  shift, and go to state 82
    ';'     shift, and go to state 83
    '{'     shift, and go to state 84
    '}'     shift, and go to state 139

    storeID     go to state 86
    statement   go to state 87
    assignment  go to state 88


state 110

   45 statement: storeID '(' . initParam args multiExprOpt ')' ';'

    $default  reduce using rule 24 (initParam)

    initParam  go to state 140


state 111

   43 statement: assignment ';' .

    $default  reduce using rule 43 (statement)


state 112

   16 multiProtDcl: multiProtDcl ',' makeProt storeFID '(' . insertFunc paramTypes ')'

    $default  reduce using rule 31 (insertFunc)

    insertFunc  go to state 141


state 113

   34 multiTypeDcl: multiTypeDcl type varDcl multiVarDcl ';' .

    $default  reduce using rule 34 (multiTypeDcl)


state 114

   44 statement: ID '(' ')' .

    $default  reduce using rule 44 (statement)


state 115

   52 assignment: ID '[' expr . ']' '=' expr
   57 expr: expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   61     | expr . DBLEQ expr
   62     | expr . NOTEQ expr
   63     | expr . LTEQ expr
   64     | expr . '<' expr
   65     | expr . GTEQ expr
   66     | expr . '>' expr
   67     | expr . LOGICAND expr
   68     | expr . LOGICOR expr

    DBLEQ     shift, and go to state 126
    NOTEQ     shift, and go to state 127
    LTEQ      shift, and go to state 128
    GTEQ      shift, and go to state 129
    LOGICAND  shift, and go to state 130
    LOGICOR   shift, and go to state 131
    '<'       shift, and go to state 132
    '>'       shift, and go to state 133
    '+'       shift, and go to state 134
    '-'       shift, and go to state 135
    '*'       shift, and go to state 136
    '/'       shift, and go to state 137
    ']'       shift, and go to state 142


state 116

   51 assignment: ID '=' expr .
   57 expr: expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   61     | expr . DBLEQ expr
   62     | expr . NOTEQ expr
   63     | expr . LTEQ expr
   64     | expr . '<' expr
   65     | expr . GTEQ expr
   66     | expr . '>' expr
   67     | expr . LOGICAND expr
   68     | expr . LOGICOR expr

    DBLEQ     shift, and go to state 126
    NOTEQ     shift, and go to state 127
    LTEQ      shift, and go to state 128
    GTEQ      shift, and go to state 129
    LOGICAND  shift, and go to state 130
    LOGICOR   shift, and go to state 131
    '<'       shift, and go to state 132
    '>'       shift, and go to state 133
    '+'       shift, and go to state 134
    '-'       shift, and go to state 135
    '*'       shift, and go to state 136
    '/'       shift, and go to state 137

    $default  reduce using rule 51 (assignment)


state 117

   37 statement: IF '(' expr . ')' statement
   38          | IF '(' expr . ')' statement ELSE statement
   57 expr: expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   61     | expr . DBLEQ expr
   62     | expr . NOTEQ expr
   63     | expr . LTEQ expr
   64     | expr . '<' expr
   65     | expr . GTEQ expr
   66     | expr . '>' expr
   67     | expr . LOGICAND expr
   68     | expr . LOGICOR expr

    DBLEQ     shift, and go to state 126
    NOTEQ     shift, and go to state 127
    LTEQ      shift, and go to state 128
    GTEQ      shift, and go to state 129
    LOGICAND  shift, and go to state 130
    LOGICOR   shift, and go to state 131
    '<'       shift, and go to state 132
    '>'       shift, and go to state 133
    '+'       shift, and go to state 134
    '-'       shift, and go to state 135
    '*'       shift, and go to state 136
    '/'       shift, and go to state 137
    ')'       shift, and go to state 143


state 118

   39 statement: WHILE '(' expr . ')' statement
   57 expr: expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   61     | expr . DBLEQ expr
   62     | expr . NOTEQ expr
   63     | expr . LTEQ expr
   64     | expr . '<' expr
   65     | expr . GTEQ expr
   66     | expr . '>' expr
   67     | expr . LOGICAND expr
   68     | expr . LOGICOR expr

    DBLEQ     shift, and go to state 126
    NOTEQ     shift, and go to state 127
    LTEQ      shift, and go to state 128
    GTEQ      shift, and go to state 129
    LOGICAND  shift, and go to state 130
    LOGICOR   shift, and go to state 131
    '<'       shift, and go to state 132
    '>'       shift, and go to state 133
    '+'       shift, and go to state 134
    '-'       shift, and go to state 135
    '*'       shift, and go to state 136
    '/'       shift, and go to state 137
    ')'       shift, and go to state 144


state 119

   51 assignment: ID . '=' expr
   52           | ID . '[' expr ']' '=' expr

    '['  shift, and go to state 95
    '='  shift, and go to state 96


state 120

   53 assgOpt: assignment .
